parser.output
State 52 conflicts: 2 shift/reduce
State 53 conflicts: 2 shift/reduce
State 57 conflicts: 1 shift/reduce
State 64 conflicts: 4 shift/reduce
State 66 conflicts: 4 shift/reduce
State 68 conflicts: 4 shift/reduce
State 74 conflicts: 16 reduce/reduce
State 121 conflicts: 2 shift/reduce
State 122 conflicts: 2 shift/reduce
State 152 conflicts: 1 shift/reduce
State 157 conflicts: 16 reduce/reduce
State 212 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ProcedureList

    2 ProcedureList: Procedure
    3              | Procedure ProcedureList

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body OptionalReturn RBRACE

    5 ParamList: ε
    6          | Param
    7          | ParamList SEMICOLON Param

    8 Param: IDList COLON Type

    9 IDList: IDENTIFIER
   10       | IDENTIFIER COMMA IDList

   11 Body: OptionalProcedures OptionalDeclarations OptionalStatements

   12 OptionalProcedures: ε
   13                   | NestedProcedures

   14 NestedProcedures: Procedure
   15                 | Procedure NestedProcedures

   16 OptionalDeclarations: ε
   17                     | Declarations

   18 OptionalStatements: ε
   19                   | Statements

   20 OptionalReturn: ε
   21               | RETURN Expression SEMICOLON

   22 Block: LBRACE OptionalDeclarations OptionalStatements RBRACE

   23 Declarations: VarDeclaration
   24             | VarDeclaration Declarations

   25 VarDeclaration: VAR SingleVarDeclaration SEMICOLON
   26               | VAR MultiVarDeclaration SEMICOLON

   27 SingleVarDeclaration: IDENTIFIER COLON STRING LBRACKET INT_LITERAL RBRACKET
   28                     | IDENTIFIER COLON Type

   29 MultiVarDeclaration: IDList COLON Type
   30                    | IDList COLON STRING LBRACKET INT_LITERAL RBRACKET

   31 Statements: Statement
   32           | Statement Statements

   33 Statement: IDENTIFIER EQUAL Expression SEMICOLON
   34          | IDENTIFIER EQUAL STRING_LITERAL SEMICOLON
   35          | IDENTIFIER LBRACKET Expression RBRACKET EQUAL Expression SEMICOLON
   36          | IDENTIFIER LBRACKET Expression RBRACKET EQUAL STRING_LITERAL SEMICOLON
   37          | IF LPAREN Expression RPAREN Block
   38          | IF LPAREN Expression RPAREN Block ELSE Block
   39          | WHILE LPAREN Expression RPAREN Block
   40          | LBRACE Statements RBRACE
   41          | Block OptionalStatements

   42 Expression: Expression OR Expression
   43           | Expression AND Expression
   44           | Expression EQUALS Expression
   45           | Expression NOTEQUAL Expression
   46           | Expression LT Expression
   47           | Expression LTE Expression
   48           | Expression GT Expression
   49           | Expression GTE Expression
   50           | AdditiveExpr

   51 AdditiveExpr: AdditiveExpr PLUS MultiplicativeExpr
   52             | AdditiveExpr MINUS MultiplicativeExpr
   53             | MultiplicativeExpr

   54 MultiplicativeExpr: MultiplicativeExpr MUL UnaryExpr
   55                   | MultiplicativeExpr DIV UnaryExpr
   56                   | UnaryExpr

   57 UnaryExpr: NOT UnaryExpr
   58          | MINUS UnaryExpr
   59          | AMP Variable
   60          | DEREFERENCE IDENTIFIER
   61          | DEREFERENCE Expression
   62          | DEREFERENCE IDENTIFIER LBRACKET INT_LITERAL RBRACKET
   63          | BAR Expression BAR
   64          | PrimaryExpr

   65 Variable: IDENTIFIER
   66         | IDENTIFIER LBRACKET Expression RBRACKET

   67 PrimaryExpr: IDENTIFIER
   68            | INT_LITERAL
   69            | LPAREN Expression RPAREN
   70            | IDENTIFIER LPAREN ArgumentList RPAREN
   71            | IDENTIFIER LBRACKET Expression RBRACKET
   72            | CHAR_LITERAL
   73            | TRUE
   74            | FALSE
   75            | NULLTOKEN

   76 ArgumentList: ε
   77             | ExpressionArg
   78             | ExpressionArg COMMA ArgumentList

   79 ExpressionArg: ExpressionArg OR ExpressionArg
   80              | ExpressionArg AND ExpressionArg
   81              | ExpressionArg EQUALS ExpressionArg
   82              | ExpressionArg NOTEQUAL ExpressionArg
   83              | ExpressionArg LT ExpressionArg
   84              | ExpressionArg LTE ExpressionArg
   85              | ExpressionArg GT ExpressionArg
   86              | ExpressionArg GTE ExpressionArg
   87              | AdditiveExprArg

   88 AdditiveExprArg: AdditiveExprArg PLUS MultiplicativeExprArg
   89                | AdditiveExprArg MINUS MultiplicativeExprArg
   90                | MultiplicativeExprArg

   91 MultiplicativeExprArg: MultiplicativeExprArg MUL UnaryExprArg
   92                      | MultiplicativeExprArg DIV UnaryExprArg
   93                      | UnaryExprArg

   94 UnaryExprArg: NOT UnaryExprArg
   95             | MINUS UnaryExprArg
   96             | AMP VariableArg
   97             | DEREFERENCE IDENTIFIER
   98             | DEREFERENCE ExpressionArg
   99             | DEREFERENCE IDENTIFIER LBRACKET INT_LITERAL RBRACKET
  100             | BAR ExpressionArg BAR
  101             | PrimaryExprArg

  102 VariableArg: IDENTIFIER
  103            | IDENTIFIER LBRACKET ExpressionArg RBRACKET

  104 PrimaryExprArg: IDENTIFIER
  105               | INT_LITERAL
  106               | LPAREN ExpressionArg RPAREN
  107               | IDENTIFIER LBRACKET ExpressionArg RBRACKET
  108               | CHAR_LITERAL
  109               | TRUE
  110               | FALSE
  111               | NULLTOKEN

  112 Type: BOOLEAN
  113     | CHAR
  114     | INTEGER
  115     | INTPTR
  116     | CHARPTR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BOOLEAN (258) 112
    CHAR (259) 113
    INTEGER (260) 114
    STRING (261) 27 30
    INTPTR (262) 115
    CHARPTR (263) 116
    IF (264) 37 38
    ELSE (265) 38
    WHILE (266) 39
    VAR (267) 25 26
    PROCEDURE (268) 4
    RETURN (269) 4 21
    NULLTOKEN (270) 75 111
    AND (271) 43 80
    DIV (272) 55 92
    EQUAL (273) 33 34 35 36
    EQUALS (274) 44 81
    GT (275) 48 85
    GTE (276) 49 86
    LT (277) 46 83
    LTE (278) 47 84
    MINUS (279) 52 58 89 95
    NOT (280) 57 94
    NOTEQUAL (281) 45 82
    OR (282) 42 79
    PLUS (283) 51 88
    MUL (284) 54 91
    AMP (285) 59 96
    DEREFERENCE (286) 60 61 62 97 98 99
    TRUE (287) 73 109
    FALSE (288) 74 110
    INT_LITERAL (289) 27 30 62 68 99 105
    IDENTIFIER (290) 4 9 10 27 28 33 34 35 36 60 62 65 66 67 70 71 97 99 102 103 104 107
    COMMA (291) 10 78
    COLON (292) 8 27 28 29 30
    UMINUS (293)
    LBRACE (294) 4 22 40
    RBRACE (295) 4 22 40
    SEMICOLON (296) 7 21 25 26 33 34 35 36
    LPAREN (297) 4 37 38 39 69 70 106
    RPAREN (298) 4 37 38 39 69 70 106
    BAR (299) 63 100
    LBRACKET (300) 27 30 35 36 62 66 71 99 103 107
    RBRACKET (301) 27 30 35 36 62 66 71 99 103 107
    STRING_LITERAL (302) 34 36
    CHAR_LITERAL (303) 72 108


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    Program (50)
        on left: 1
        on right: 0
    ProcedureList (51)
        on left: 2 3
        on right: 1 3
    Procedure (52)
        on left: 4
        on right: 2 3 14 15
    ParamList (53)
        on left: 5 6 7
        on right: 4 7
    Param (54)
        on left: 8
        on right: 6 7
    IDList (55)
        on left: 9 10
        on right: 8 10 29 30
    Body (56)
        on left: 11
        on right: 4
    OptionalProcedures (57)
        on left: 12 13
        on right: 11
    NestedProcedures (58)
        on left: 14 15
        on right: 13 15
    OptionalDeclarations (59)
        on left: 16 17
        on right: 11 22
    OptionalStatements (60)
        on left: 18 19
        on right: 11 22 41
    OptionalReturn (61)
        on left: 20 21
        on right: 4
    Block (62)
        on left: 22
        on right: 37 38 39 41
    Declarations (63)
        on left: 23 24
        on right: 17 24
    VarDeclaration (64)
        on left: 25 26
        on right: 23 24
    SingleVarDeclaration (65)
        on left: 27 28
        on right: 25
    MultiVarDeclaration (66)
        on left: 29 30
        on right: 26
    Statements (67)
        on left: 31 32
        on right: 19 32 40
    Statement (68)
        on left: 33 34 35 36 37 38 39 40 41
        on right: 31 32
    Expression (69)
        on left: 42 43 44 45 46 47 48 49 50
        on right: 21 33 35 36 37 38 39 42 43 44 45 46 47 48 49 61 63 66 69 71
    AdditiveExpr (70)
        on left: 51 52 53
        on right: 50 51 52
    MultiplicativeExpr (71)
        on left: 54 55 56
        on right: 51 52 53 54 55
    UnaryExpr (72)
        on left: 57 58 59 60 61 62 63 64
        on right: 54 55 56 57 58
    Variable (73)
        on left: 65 66
        on right: 59
    PrimaryExpr (74)
        on left: 67 68 69 70 71 72 73 74 75
        on right: 64
    ArgumentList (75)
        on left: 76 77 78
        on right: 70 78
    ExpressionArg (76)
        on left: 79 80 81 82 83 84 85 86 87
        on right: 77 78 79 80 81 82 83 84 85 86 98 100 103 106 107
    AdditiveExprArg (77)
        on left: 88 89 90
        on right: 87 88 89
    MultiplicativeExprArg (78)
        on left: 91 92 93
        on right: 88 89 90 91 92
    UnaryExprArg (79)
        on left: 94 95 96 97 98 99 100 101
        on right: 91 92 93 94 95
    VariableArg (80)
        on left: 102 103
        on right: 96
    PrimaryExprArg (81)
        on left: 104 105 106 107 108 109 110 111
        on right: 101
    Type (82)
        on left: 112 113 114 115 116
        on right: 4 8 28 29


State 0

    0 $accept: • Program $end

    PROCEDURE  shift, and go to state 1

    Program        go to state 2
    ProcedureList  go to state 3
    Procedure      go to state 4


State 1

    4 Procedure: PROCEDURE • IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body OptionalReturn RBRACE

    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 6


State 3

    1 Program: ProcedureList •

    $default  reduce using rule 1 (Program)


State 4

    2 ProcedureList: Procedure •
    3              | Procedure • ProcedureList

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 2 (ProcedureList)

    ProcedureList  go to state 7
    Procedure      go to state 4


State 5

    4 Procedure: PROCEDURE IDENTIFIER • LPAREN ParamList RPAREN RETURN Type LBRACE Body OptionalReturn RBRACE

    LPAREN  shift, and go to state 8


State 6

    0 $accept: Program $end •

    $default  accept


State 7

    3 ProcedureList: Procedure ProcedureList •

    $default  reduce using rule 3 (ProcedureList)


State 8

    4 Procedure: PROCEDURE IDENTIFIER LPAREN • ParamList RPAREN RETURN Type LBRACE Body OptionalReturn RBRACE

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 5 (ParamList)

    ParamList  go to state 10
    Param      go to state 11
    IDList     go to state 12


State 9

    9 IDList: IDENTIFIER •
   10       | IDENTIFIER • COMMA IDList

    COMMA  shift, and go to state 13

    $default  reduce using rule 9 (IDList)


State 10

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList • RPAREN RETURN Type LBRACE Body OptionalReturn RBRACE
    7 ParamList: ParamList • SEMICOLON Param

    SEMICOLON  shift, and go to state 14
    RPAREN     shift, and go to state 15


State 11

    6 ParamList: Param •

    $default  reduce using rule 6 (ParamList)


State 12

    8 Param: IDList • COLON Type

    COLON  shift, and go to state 16


State 13

   10 IDList: IDENTIFIER COMMA • IDList

    IDENTIFIER  shift, and go to state 9

    IDList  go to state 17


State 14

    7 ParamList: ParamList SEMICOLON • Param

    IDENTIFIER  shift, and go to state 9

    Param   go to state 18
    IDList  go to state 12


State 15

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN • RETURN Type LBRACE Body OptionalReturn RBRACE

    RETURN  shift, and go to state 19


State 16

    8 Param: IDList COLON • Type

    BOOLEAN  shift, and go to state 20
    CHAR     shift, and go to state 21
    INTEGER  shift, and go to state 22
    INTPTR   shift, and go to state 23
    CHARPTR  shift, and go to state 24

    Type  go to state 25


State 17

   10 IDList: IDENTIFIER COMMA IDList •

    $default  reduce using rule 10 (IDList)


State 18

    7 ParamList: ParamList SEMICOLON Param •

    $default  reduce using rule 7 (ParamList)


State 19

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN • Type LBRACE Body OptionalReturn RBRACE

    BOOLEAN  shift, and go to state 20
    CHAR     shift, and go to state 21
    INTEGER  shift, and go to state 22
    INTPTR   shift, and go to state 23
    CHARPTR  shift, and go to state 24

    Type  go to state 26


State 20

  112 Type: BOOLEAN •

    $default  reduce using rule 112 (Type)


State 21

  113 Type: CHAR •

    $default  reduce using rule 113 (Type)


State 22

  114 Type: INTEGER •

    $default  reduce using rule 114 (Type)


State 23

  115 Type: INTPTR •

    $default  reduce using rule 115 (Type)


State 24

  116 Type: CHARPTR •

    $default  reduce using rule 116 (Type)


State 25

    8 Param: IDList COLON Type •

    $default  reduce using rule 8 (Param)


State 26

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type • LBRACE Body OptionalReturn RBRACE

    LBRACE  shift, and go to state 27


State 27

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE • Body OptionalReturn RBRACE

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 12 (OptionalProcedures)

    Procedure           go to state 28
    Body                go to state 29
    OptionalProcedures  go to state 30
    NestedProcedures    go to state 31


State 28

   14 NestedProcedures: Procedure •
   15                 | Procedure • NestedProcedures

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 14 (NestedProcedures)

    Procedure         go to state 28
    NestedProcedures  go to state 32


State 29

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body • OptionalReturn RBRACE

    RETURN  shift, and go to state 33

    $default  reduce using rule 20 (OptionalReturn)

    OptionalReturn  go to state 34


State 30

   11 Body: OptionalProcedures • OptionalDeclarations OptionalStatements

    VAR  shift, and go to state 35

    $default  reduce using rule 16 (OptionalDeclarations)

    OptionalDeclarations  go to state 36
    Declarations          go to state 37
    VarDeclaration        go to state 38


State 31

   13 OptionalProcedures: NestedProcedures •

    $default  reduce using rule 13 (OptionalProcedures)


State 32

   15 NestedProcedures: Procedure NestedProcedures •

    $default  reduce using rule 15 (NestedProcedures)


State 33

   21 OptionalReturn: RETURN • Expression SEMICOLON

    NULLTOKEN     shift, and go to state 39
    MINUS         shift, and go to state 40
    NOT           shift, and go to state 41
    AMP           shift, and go to state 42
    DEREFERENCE   shift, and go to state 43
    TRUE          shift, and go to state 44
    FALSE         shift, and go to state 45
    INT_LITERAL   shift, and go to state 46
    IDENTIFIER    shift, and go to state 47
    LPAREN        shift, and go to state 48
    BAR           shift, and go to state 49
    CHAR_LITERAL  shift, and go to state 50

    Expression          go to state 51
    AdditiveExpr        go to state 52
    MultiplicativeExpr  go to state 53
    UnaryExpr           go to state 54
    PrimaryExpr         go to state 55


State 34

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body OptionalReturn • RBRACE

    RBRACE  shift, and go to state 56


State 35

   25 VarDeclaration: VAR • SingleVarDeclaration SEMICOLON
   26               | VAR • MultiVarDeclaration SEMICOLON

    IDENTIFIER  shift, and go to state 57

    IDList                go to state 58
    SingleVarDeclaration  go to state 59
    MultiVarDeclaration   go to state 60


State 36

   11 Body: OptionalProcedures OptionalDeclarations • OptionalStatements

    IF          shift, and go to state 61
    WHILE       shift, and go to state 62
    IDENTIFIER  shift, and go to state 63
    LBRACE      shift, and go to state 64

    $default  reduce using rule 18 (OptionalStatements)

    OptionalStatements  go to state 65
    Block               go to state 66
    Statements          go to state 67
    Statement           go to state 68


State 37

   17 OptionalDeclarations: Declarations •

    $default  reduce using rule 17 (OptionalDeclarations)


State 38

   23 Declarations: VarDeclaration •
   24             | VarDeclaration • Declarations

    VAR  shift, and go to state 35

    $default  reduce using rule 23 (Declarations)

    Declarations    go to state 69
    VarDeclaration  go to state 38


State 39

   75 PrimaryExpr: NULLTOKEN •

    $default  reduce using rule 75 (PrimaryExpr)


State 40

   58 UnaryExpr: MINUS • UnaryExpr

    NULLTOKEN     shift, and go to state 39
    MINUS         shift, and go to state 40
    NOT           shift, and go to state 41
    AMP           shift, and go to state 42
    DEREFERENCE   shift, and go to state 43
    TRUE          shift, and go to state 44
    FALSE         shift, and go to state 45
    INT_LITERAL   shift, and go to state 46
    IDENTIFIER    shift, and go to state 47
    LPAREN        shift, and go to state 48
    BAR           shift, and go to state 49
    CHAR_LITERAL  shift, and go to state 50

    UnaryExpr    go to state 70
    PrimaryExpr  go to state 55


State 41

   57 UnaryExpr: NOT • UnaryExpr

    NULLTOKEN     shift, and go to state 39
    MINUS         shift, and go to state 40
    NOT           shift, and go to state 41
    AMP           shift, and go to state 42
    DEREFERENCE   shift, and go to state 43
    TRUE          shift, and go to state 44
    FALSE         shift, and go to state 45
    INT_LITERAL   shift, and go to state 46
    IDENTIFIER    shift, and go to state 47
    LPAREN        shift, and go to state 48
    BAR           shift, and go to state 49
    CHAR_LITERAL  shift, and go to state 50

    UnaryExpr    go to state 71
    PrimaryExpr  go to state 55


State 42

   59 UnaryExpr: AMP • Variable

    IDENTIFIER  shift, and go to state 72

    Variable  go to state 73


State 43

   60 UnaryExpr: DEREFERENCE • IDENTIFIER
   61          | DEREFERENCE • Expression
   62          | DEREFERENCE • IDENTIFIER LBRACKET INT_LITERAL RBRACKET

    NULLTOKEN     shift, and go to state 39
    MINUS         shift, and go to state 40
    NOT           shift, and go to state 41
    AMP           shift, and go to state 42
    DEREFERENCE   shift, and go to state 43
    TRUE          shift, and go to state 44
    FALSE         shift, and go to state 45
    INT_LITERAL   shift, and go to state 46
    IDENTIFIER    shift, and go to state 74
    LPAREN        shift, and go to state 48
    BAR           shift, and go to state 49
    CHAR_LITERAL  shift, and go to state 50

    Expression          go to state 75
    AdditiveExpr        go to state 52
    MultiplicativeExpr  go to state 53
    UnaryExpr           go to state 54
    PrimaryExpr         go to state 55


State 44

   73 PrimaryExpr: TRUE •

    $default  reduce using rule 73 (PrimaryExpr)


State 45

   74 PrimaryExpr: FALSE •

    $default  reduce using rule 74 (PrimaryExpr)


State 46

   68 PrimaryExpr: INT_LITERAL •

    $default  reduce using rule 68 (PrimaryExpr)


State 47

   67 PrimaryExpr: IDENTIFIER •
   70            | IDENTIFIER • LPAREN ArgumentList RPAREN
   71            | IDENTIFIER • LBRACKET Expression RBRACKET

    LPAREN    shift, and go to state 76
    LBRACKET  shift, and go to state 77

    $default  reduce using rule 67 (PrimaryExpr)


State 48

   69 PrimaryExpr: LPAREN • Expression RPAREN

    NULLTOKEN     shift, and go to state 39
    MINUS         shift, and go to state 40
    NOT           shift, and go to state 41
    AMP           shift, and go to state 42
    DEREFERENCE   shift, and go to state 43
    TRUE          shift, and go to state 44
    FALSE         shift, and go to state 45
    INT_LITERAL   shift, and go to state 46
    IDENTIFIER    shift, and go to state 47
    LPAREN        shift, and go to state 48
    BAR           shift, and go to state 49
    CHAR_LITERAL  shift, and go to state 50

    Expression          go to state 78
    AdditiveExpr        go to state 52
    MultiplicativeExpr  go to state 53
    UnaryExpr           go to state 54
    PrimaryExpr         go to state 55


State 49

   63 UnaryExpr: BAR • Expression BAR

    NULLTOKEN     shift, and go to state 39
    MINUS         shift, and go to state 40
    NOT           shift, and go to state 41
    AMP           shift, and go to state 42
    DEREFERENCE   shift, and go to state 43
    TRUE          shift, and go to state 44
    FALSE         shift, and go to state 45
    INT_LITERAL   shift, and go to state 46
    IDENTIFIER    shift, and go to state 47
    LPAREN        shift, and go to state 48
    BAR           shift, and go to state 49
    CHAR_LITERAL  shift, and go to state 50

    Expression          go to state 79
    AdditiveExpr        go to state 52
    MultiplicativeExpr  go to state 53
    UnaryExpr           go to state 54
    PrimaryExpr         go to state 55


State 50

   72 PrimaryExpr: CHAR_LITERAL •

    $default  reduce using rule 72 (PrimaryExpr)


State 51

   21 OptionalReturn: RETURN Expression • SEMICOLON
   42 Expression: Expression • OR Expression
   43           | Expression • AND Expression
   44           | Expression • EQUALS Expression
   45           | Expression • NOTEQUAL Expression
   46           | Expression • LT Expression
   47           | Expression • LTE Expression
   48           | Expression • GT Expression
   49           | Expression • GTE Expression

    AND        shift, and go to state 80
    EQUALS     shift, and go to state 81
    GT         shift, and go to state 82
    GTE        shift, and go to state 83
    LT         shift, and go to state 84
    LTE        shift, and go to state 85
    NOTEQUAL   shift, and go to state 86
    OR         shift, and go to state 87
    SEMICOLON  shift, and go to state 88


State 52

   50 Expression: AdditiveExpr •
   51 AdditiveExpr: AdditiveExpr • PLUS MultiplicativeExpr
   52             | AdditiveExpr • MINUS MultiplicativeExpr

    MINUS  shift, and go to state 89
    PLUS   shift, and go to state 90

    MINUS     [reduce using rule 50 (Expression)]
    PLUS      [reduce using rule 50 (Expression)]
    $default  reduce using rule 50 (Expression)


State 53

   53 AdditiveExpr: MultiplicativeExpr •
   54 MultiplicativeExpr: MultiplicativeExpr • MUL UnaryExpr
   55                   | MultiplicativeExpr • DIV UnaryExpr

    DIV  shift, and go to state 91
    MUL  shift, and go to state 92

    DIV       [reduce using rule 53 (AdditiveExpr)]
    MUL       [reduce using rule 53 (AdditiveExpr)]
    $default  reduce using rule 53 (AdditiveExpr)


State 54

   56 MultiplicativeExpr: UnaryExpr •

    $default  reduce using rule 56 (MultiplicativeExpr)


State 55

   64 UnaryExpr: PrimaryExpr •

    $default  reduce using rule 64 (UnaryExpr)


State 56

    4 Procedure: PROCEDURE IDENTIFIER LPAREN ParamList RPAREN RETURN Type LBRACE Body OptionalReturn RBRACE •

    $default  reduce using rule 4 (Procedure)


State 57

    9 IDList: IDENTIFIER •
   10       | IDENTIFIER • COMMA IDList
   27 SingleVarDeclaration: IDENTIFIER • COLON STRING LBRACKET INT_LITERAL RBRACKET
   28                     | IDENTIFIER • COLON Type

    COMMA  shift, and go to state 13
    COLON  shift, and go to state 93

    COLON  [reduce using rule 9 (IDList)]


State 58

   29 MultiVarDeclaration: IDList • COLON Type
   30                    | IDList • COLON STRING LBRACKET INT_LITERAL RBRACKET

    COLON  shift, and go to state 94


State 59

   25 VarDeclaration: VAR SingleVarDeclaration • SEMICOLON

    SEMICOLON  shift, and go to state 95


State 60

   26 VarDeclaration: VAR MultiVarDeclaration • SEMICOLON

    SEMICOLON  shift, and go to state 96


State 61

   37 Statement: IF • LPAREN Expression RPAREN Block
   38          | IF • LPAREN Expression RPAREN Block ELSE Block

    LPAREN  shift, and go to state 97


State 62

   39 Statement: WHILE • LPAREN Expression RPAREN Block

    LPAREN  shift, and go to state 98


State 63

   33 Statement: IDENTIFIER • EQUAL Expression SEMICOLON
   34          | IDENTIFIER • EQUAL STRING_LITERAL SEMICOLON
   35          | IDENTIFIER • LBRACKET Expression RBRACKET EQUAL Expression SEMICOLON
   36          | IDENTIFIER • LBRACKET Expression RBRACKET EQUAL STRING_LITERAL SEMICOLON

    EQUAL     shift, and go to state 99
    LBRACKET  shift, and go to state 100


State 64

   22 Block: LBRACE • OptionalDeclarations OptionalStatements RBRACE
   40 Statement: LBRACE • Statements RBRACE

    IF          shift, and go to state 61
    WHILE       shift, and go to state 62
    VAR         shift, and go to state 35
    IDENTIFIER  shift, and go to state 63
    LBRACE      shift, and go to state 64

    IF          [reduce using rule 16 (OptionalDeclarations)]
    WHILE       [reduce using rule 16 (OptionalDeclarations)]
    IDENTIFIER  [reduce using rule 16 (OptionalDeclarations)]
    LBRACE      [reduce using rule 16 (OptionalDeclarations)]
    $default    reduce using rule 16 (OptionalDeclarations)

    OptionalDeclarations  go to state 101
    Block                 go to state 66
    Declarations          go to state 37
    VarDeclaration        go to state 38
    Statements            go to state 102
    Statement             go to state 68


State 65

   11 Body: OptionalProcedures OptionalDeclarations OptionalStatements •

    $default  reduce using rule 11 (Body)


State 66

   41 Statement: Block • OptionalStatements

    IF          shift, and go to state 61
    WHILE       shift, and go to state 62
    IDENTIFIER  shift, and go to state 63
    LBRACE      shift, and go to state 64
